@@ -3,20 +3,25 @@ package com.workmate.was.guide.service.impl;
 import com.workmate.was.guide.dao.GuideRepository;
 import com.workmate.was.guide.service.GuideService;
 import com.workmate.was.guide.vo.Guide;
+import com.workmate.was.guide.vo.GuidePageVo;
 import com.workmate.was.guide.vo.GuideResponseVo;
 import com.workmate.was.guide.vo.GuideSaveRequestVo;
+import com.workmate.was.guide.vo.GuideSummaryVo;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.ai.document.Document;
 import org.springframework.ai.transformer.splitter.TokenTextSplitter;
 import org.springframework.ai.vectorstore.VectorStore;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
 import org.springframework.jdbc.core.JdbcTemplate;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 /**
  * 가이드 문서 처리 및 벡터 스토어 RAG 적재 서비스 구현체.
@@ -120,24 +125,65 @@ public class GuideServiceImpl implements GuideService {
     }
 
     /**
-     * 특정 사용자가 등록한 가이드 목록을 조회한다.
+     * 접근 가능한 가이드(본인 + 공개)를 키워드로 검색해 페이징 조회한다 (G1, F4-08).
+     * 단일 OR 쿼리로 조회하므로 이전처럼 두 목록을 Java 에서 병합·중복제거할 필요가 없다.
      *
-     * @param userSeq 사용자 식별자
-     * @return 가이드 목록 VO 리스트
+     * @param userSeq 요청 사용자 식별자
+     * @param keyword 검색어 (null·공백이면 전체)
+     * @param page    0-based 페이지 번호
+     * @param size    페이지 크기
+     * @return 가이드 목록 페이지 VO (카드 표시용 요약 + 페이징 메타)
      */
     @Override
     @Transactional(readOnly = true)
-    public List<GuideResponseVo> getAccessibleGuides(Long userSeq) {
-        // 본인 문서 + 공개 문서 병합(중복 제거) 후 최신순 (G1, F4-08)
-        Map<Long, Guide> merged = new java.util.LinkedHashMap<>();
-        guideRepository.findByUserSeqOrderByCreatedAtDesc(userSeq)
-                .forEach(g -> merged.put(g.getGuideSeq(), g));
-        guideRepository.findByIsPublicOrderByCreatedAtDesc(true)
-                .forEach(g -> merged.putIfAbsent(g.getGuideSeq(), g));
-        return merged.values().stream()
-                .sorted(java.util.Comparator.comparing(Guide::getCreatedAt).reversed())
-                .map(GuideResponseVo::new)
-                .collect(Collectors.toList());
+    public GuidePageVo searchGuides(Long userSeq, String keyword, int page, int size) {
+        // 최신 수정순 페이징 (관리자 목록과 동일 관용구)
+        Pageable pageable = PageRequest.of(page, size, Sort.by(Sort.Direction.DESC, "updatedAt"));
+        // 키워드가 비면 null 로 넘겨 JPQL 의 ':keyword IS NULL' 분기(전체 조회)를 타게 한다
+        String kw = (keyword == null || keyword.isBlank()) ? null : keyword.trim();
+
+        Page<Guide> result = guideRepository.searchAccessible(userSeq, kw, pageable);
+        return GuidePageVo.builder()
+                .content(result.getContent().stream().map(this::toSummary).toList())
+                .page(result.getNumber())
+                .totalPages(result.getTotalPages())
+                .totalElements(result.getTotalElements())
+                .build();
+    }
+
+    /** 목록 카드용 요약 VO 변환 — 본문은 미리보기(excerpt)로 축약해 담는다 */
+    private GuideSummaryVo toSummary(Guide guide) {
+        return GuideSummaryVo.builder()
+                .guideSeq(guide.getGuideSeq())
+                .title(guide.getTitle())
+                .excerpt(buildExcerpt(guide.getContent()))
+                .isPublic(guide.getIsPublic())
+                .updatedAt(guide.getUpdatedAt())
+                .build();
+    }
+
+    /** 미리보기 길이 — 카드 2줄 분량 */
+    private static final int EXCERPT_LENGTH = 120;
+
+    /**
+     * 마크다운 본문에서 카드 미리보기용 평문을 만든다.
+     * 링크는 표시 텍스트만 남기고, 헤더·강조·코드·인용·리스트 기호와 연속 공백을 정리한 뒤 앞부분만 자른다.
+     *
+     * @param content 마크다운 본문
+     * @return 정리된 미리보기 문자열 (길이 초과 시 말줄임표 추가)
+     */
+    private String buildExcerpt(String content) {
+        if (content == null || content.isBlank()) {
+            return "";
+        }
+        String plain = content
+                .replaceAll("!?\\[([^\\]]*)\\]\\([^)]*\\)", "$1") // 이미지/링크 → 표시 텍스트만
+                .replaceAll("(?m)^\\s{0,3}#{1,6}\\s*", "")          // 헤더 기호
+                .replaceAll("(?m)^\\s*[-*+>]\\s+", "")               // 리스트·인용 접두 기호
+                .replaceAll("[*_`~#>]", "")                          // 인라인 강조/코드 기호
+                .replaceAll("\\s+", " ")                              // 연속 공백·줄바꿈 축약
+                .trim();
+        return plain.length() <= EXCERPT_LENGTH ? plain : plain.substring(0, EXCERPT_LENGTH).trim() + "…";
     }
 
     /** 본인 소유 가이드를 조회한다. 없거나 타인 문서면 예외 (F4-01) */
